--- a/gv-viewer/templates/twitter_accounts.template
+++ b/gv-viewer/templates/twitter_accounts.template
@@ -1,14 +1,13 @@
-
 <div class="hero-unit">
   <h1>Twitter Accounts</h1>
   <p>This is a list of all of the twitter accounts in the stuff things other things yes yes yes other things.</p>
 </div>
 
 <div class="row">
-<table id="datatable" class="table table-striped">
+<table id="datatable" class="table table-condensed">
   <thead>
     <tr>
-      <th>Name</th><th>collocation #</th><th>post #</th><th>last date</th>
+      <th>Name</th><th id="collocation_sort">collocation #</th><th id="posts_sort">post #</th><th>last date</th><th></th>
     </tr>
   </thead>
 
