--- a/gv-viewer/templates/post.template
+++ b/gv-viewer/templates/post.template
@@ -1,8 +1,11 @@
 <div class="container" id="post">
   <div class="hero-unit">
     <div class="btn" style="align:right" id="close_post">Close</div>
-    <h2><%=post.title%></h2>
-    <h3><%=new Date(Date.parse(post.publication_date)).toDateString()%> <a href="<%=post.link%>">[permalink]</a></h3>
-    <%=post.content%>
+    <div class="btn" style="align:right" id="toggle_post">Content</div>
+      <h2><%=post.title%></h2>
+      <h3><%=new Date(Date.parse(post.publication_date)).toDateString()%> <a href="<%=post.link%>">[permalink]</a></h3>
+    <div id="post_content">
+      <%=post.content%>
+    </div>
   </div>
 </div>
