now visualise twitter collocation graph

--- a/gv-viewer/templates/categories.template
+++ b/gv-viewer/templates/categories.template
@@ -9,6 +9,7 @@
 
 <div id="post_timeseries" style="height:200px;"><svg style="height:200px;"></svg></div>
 <div id="twitter_timeseries" style="height:200px;"><svg style="height:200px;"></svg></div>
+<div id="twitter_graph"></div>
 
 <div class="row">
 <table id="datatable" class="table table-condensed table-striped">
