updated data processing code

--- a/gv-viewer/templates/twitter_accounts.template
+++ b/gv-viewer/templates/twitter_accounts.template
@@ -1,6 +1,6 @@
 <div class="hero-unit">
-  <h1>Twitter Accounts</h1>
-  <p>This is a list of all of the twitter accounts in the stuff things other things yes yes yes other things.</p>
+  <h1>Top Global Voices Twitter Accounts</h1>
+  <p>This is a list list of the top 400 most cited twitter accounts on Global Voices. You can sort by the number of posts that an account appears in or the number of other Twitter accounts that the account appears next to (collocation). Click an account name to view its related posts and accounts.</p>
 </div>
 
 <div class="row">
