--- a/gv-viewer/templates/categories.template
+++ b/gv-viewer/templates/categories.template
@@ -1,5 +1,8 @@
 <div class="hero-unit">
   <h1 id="category_title">Posts and Twitter Citation Volume on Global Voices</h1>
+  <hr/>
+  <div id="category_stats"></div>
+  <hr/>
   <p>Select a GV category to view posts and Tweets over time. This graph only includes categories from Oct 2004 through July 2012 with at least 40 posts.</p>
   <span class="btn" id="select_categories">Select Category</span>
   <p id="categories"></p>
