--- a/gv-viewer/templates/twitter_account.template
+++ b/gv-viewer/templates/twitter_account.template
@@ -4,10 +4,12 @@
       <table id="twitter_account_table" class="table table-condensed">
         <tr><td><strong>First Date</strong></td><td><%=first_date%></td></tr>
         <tr><td><strong>Last Date</strong></td><td><%=last_date%></td></tr>
-        <tr><td><strong>All Posts</strong></td><td id="post_links">
+        <tr><td><strong><%=category%> Posts</strong></td><td><%=category_posts_count%></td></tr>
+        <tr><td><strong>All Categories</strong></td><td id="all_categories"></td></tr>
+        <tr><td><strong>All Posts (<%=posts_count%>)</strong></td><td id="post_links">
 </td></tr>
-        <tr><td><strong><%=category%> Collocations</strong></td><td id="category_twitter_collocations">
-        <tr><td><strong>All Collocations</strong></td><td id="all_twitter_collocations">
+        <tr><td><strong><%=category%> Collocations(<%=_.size(category_collocations)%>)</strong></td><td id="category_twitter_collocations">
+        <tr><td><strong>All Collocations(<%=collocation_count%>)</strong></td><td id="all_twitter_collocations">
 </td></tr>
       </table>
       <div class="btn" id="close_twitter_account">Close</div>
